# vindicta-oracle

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  sonar-project.properties
.github/workflows/: gitleaks.yml
SETUP/: index.html
adr/000-template/: index.html
adr/001-python-language/: index.html
adr/002-precommit-required/: index.html
agents/: index.html
api/: index.html
contributing/: index.html
docs/: SETUP.md  agents.md  api.md  contributing.md  getting-started.md  index.md
docs-sphinx/: README.md  conf.py  index.md
docs-sphinx/_build/html/: .buildinfo  README.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs-sphinx/api/: index.md
docs/adr/: 000-template.md  001-python-language.md  002-precommit-required.md
docs/proposals/: feat-011-match-prediction-api.md
getting-started/: index.html
proposals/feat-011-match-prediction-api/: index.html
search/: search_index.json
specs/001-debate-engine/: analysis.md  plan.md  spec.md  tasks.md
specs/002-oracle-rag-utilization/: data-model.md  plan.md  research.md  spec.md  speckit_analysis_report.md  tasks.md
specs/002-oracle-rag-utilization/checklists/: requirements.md
specs/003-list-grader-api/: checklist.md  plan.md  spec.md  tasks.md
specs/list-grader-api/: spec.md  tasks.md
src/vindicta_oracle/: __init__.py  __main__.py  api.py  debate.py  demo.py  engine.py  grader.py  models.py  ollama_client.py  protocol.py  transcript.py
src/vindicta_oracle.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/vindicta_oracle/agents/: __init__.py  adversary.py  adversary_impl.py  arbiter.py  arbiter_impl.py  base.py  chaos.py  home.py  home_impl.py  rule_sage.py  rule_sage_impl.py
src/vindicta_oracle/rag/: __init__.py  client.py  context_assembler.py  models.py  (+2 more)
tests/: test_agents.py  test_api.py  test_context_assembler.py  test_fallback_cache.py  test_grader.py  test_grading_data.py  test_oracle.py  test_rag_client.py  test_rag_integration.py
(+11 files in other folders)
